# commonmeta-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: python-wheels.yml
docs/: 4-day-spike.md
examples/: test_crossref_xml.rs
python/: Cargo.toml  README.md  pyproject.toml
python/src/: lib.rs
python/tests/: test_bindings.py
resources/: commonmeta_v1.0.json  crossref-v5.4.0.json  ror_schema_v2_1.json
resources/datacite/: datacite-v4.xsd
resources/datacite/include/: datacite-relatedIdentifierType-v4.xsd
src/: author_utils.rs  constants.rs  crockford.rs  data.rs  decode.rs  doi_utils.rs  doiutils.rs  encode.rs  error.rs  file_utils.rs  lib.rs  main.rs  progress.rs  schema_utils.rs  spdx.rs  traits.rs  utils.rs  vocab.rs  vocabularies.rs
src/cmd/: analyze.rs  convert.rs  decode.rs  dump.rs  encode.rs  import.rs  install.rs  list.rs  match.rs  mod.rs  push.rs  put.rs
src/formats/: bibtex.rs  cff.rs  citation.rs  codemeta.rs  commonmeta.rs  crossref.rs  crossref_xml.rs  csl.rs  datacite.rs  datacite_xml.rs  inveniordm.rs  jsonfeed.rs  mod.rs  openalex.rs  ris.rs  ror.rs  ror_countries.rs  schemaorg.rs  sqlite_stream.rs  vraix.rs
src/vocabularies/: subjects_openalex.yaml
tests/: conformance.rs  reader_fixture_matrices.rs  schema_utils_conformance.rs
tests/common/: mod.rs
tests/fixtures/bibtex/: journal_article.bib
tests/fixtures/bibtex_commonmeta/: crossref.json  journal_article.json
tests/fixtures/bibtex_out/: journal_article.bib
tests/fixtures/cff_commonmeta/: CITATION.json
tests/fixtures/commonmeta/: blog_post_1.json  citeproc.json  citeproc_no_author.json  codemeta.json  crossref_journal_article.json  csl_journal_article.json  datacite_dataset.json  datacite_date.json  datacite_multiple_identifiers.json  datacite_subject_scheme_for.json  dataset_geo.json  inveniordm_software.json  journal_article.json  journal_article_datacite_reader.json  jsonfeed_blog_post.json  jsonfeed_blog_post_sathe.json  jsonfeed_cczero_license.json  jsonfeed_ghost_with_affiliations.json  jsonfeed_post_with_funding.json  jsonfeed_post_with_relationships.json  jsonfeed_wordpress_with_references.json  schemaorg_blog_posting.json  schemaorg_geolocation.json  schemaorg_gtex.json  schemaorg_journal_article.json
tests/fixtures/crossref/: crossref_journal_article.json
tests/fixtures/crossref_out/: crossref_journal_article.json
tests/fixtures/crossref_xml/: journal_article.xml
tests/fixtures/crossref_xml_commonmeta/: crossref_elife_01567.json
tests/fixtures/csl/: csl_journal_article.json
tests/fixtures/datacite/: journal_article.json
tests/fixtures/datacite_reader/: datacite_dataset.json  datacite_date.json  datacite_multiple_identifiers.json  datacite_subject_scheme_for.json  journal_article_datacite_reader.json
tests/fixtures/datacite_xml_commonmeta/: full_v4_4.json  geolocation.json  schema_4_0.json
tests/fixtures/jsonfeed/: jsonfeed_blog_post.json  jsonfeed_cczero_license.json  jsonfeed_ghost_with_affiliations.json  jsonfeed_post_with_funding.json  jsonfeed_post_with_relationships.json  jsonfeed_wordpress_with_references.json
tests/fixtures/ris_commonmeta/: crossref.json
tests/fixtures/schemaorg/: schemaorg_journal_article.json
tests/fixtures/schemaorg_out/: journal_article.json
