[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "commonmeta-rs"
description = "PyO3 bindings for commonmeta-rs's list/batch functions (VRAIX dump fetch+cache, Parquet I/O, batched archives)"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "commonmeta_rs"
